multipathApp/deploy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
  labels:
    app: deploy1
spec:
  selector:
    matchLabels:
      app: deploy1
  template:
    metadata:
      labels:
        app: deploy1
    spec:
      containers:
        - name: deploy1
          image: httpd
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: deploy1service
spec:
  selector:
    app: deploy1
  #type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
